<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Home"
        android:background="#f3f3f3"
        android:theme="@style/Theme.Certificatekeeper.NoActionBar">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="#425CBC"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold"
            app:layout_constraintVertical_bias="0.035" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textColor="#425CBC"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.036"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.075" />

        <GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:columnCount="2"
            android:rowCount="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout4">

            <androidx.cardview.widget.CardView
                android:layout_width="175dp"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_gravity="fill"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/internal_memori" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/internalmemori"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:textColor="#16236A"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:text="Internal Memory"
                            android:textColor="#16236A"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </GridLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="fill"
                android:layout_margin="15dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="8dp">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:src="@drawable/sd_card" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/sdcard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="10dp"
                            android:textColor="#16236A"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="SD Card"
                            android:textColor="#16236A"
                            android:textSize="12sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </GridLayout>


            </androidx.cardview.widget.CardView>
        </GridLayout>

        <GridLayout
            android:id="@+id/gridLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gridLayout"
            app:layout_constraintVertical_bias="0.0">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_margin="10dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp"

                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/explore_your_certificate"
                        android:textColor="#425CBC"
                        android:textStyle="bold" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/explorefile"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:layout_margin="5dp"
                            android:layout_marginLeft="20dp"
                            app:cardBackgroundColor="#FFFFFF"
                            app:cardElevation="5dp"
                            app:cardCornerRadius="10dp">

                            <ImageView
                                android:foreground="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/folder_containing"
                                android:focusable="true" />
                        </androidx.cardview.widget.CardView>
                    </GridLayout>

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/upload_your_certificate"
                        android:textColor="#425CBC"
                        android:textStyle="bold" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_row="0"
                            android:layout_column="0"
                            android:layout_margin="5dp"
                            android:layout_marginLeft="20dp"
                            app:cardCornerRadius="10dp"
                            app:cardBackgroundColor="#FFFFFF"
                            app:cardElevation="5dp">

                            <ImageView
                                android:foreground="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/cloud"
                                android:focusable="true" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_margin="5dp"
                            android:layout_marginLeft="20dp"
                            app:cardCornerRadius="10dp"
                            app:cardBackgroundColor="#FFFFFF"
                            app:cardElevation="5dp">

                            <ImageView
                                android:foreground="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/camera"
                                android:focusable="true" />
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_row="0"
                            android:layout_column="2"
                            android:layout_margin="5dp"
                            android:layout_marginLeft="20dp"
                            app:cardCornerRadius="10dp"
                            app:cardBackgroundColor="#FFFFFF"
                            app:cardElevation="5dp">

                            <ImageView
                                android:foreground="?android:attr/selectableItemBackground"
                                android:clickable="true"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/dokumen"
                                android:focusable="true" />
                        </androidx.cardview.widget.CardView>
                    </GridLayout>

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/recently_open"
                        android:textColor="#425CBC"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/recently">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </GridLayout>

        <GridLayout
            android:id="@+id/gridLayout4"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="67dp"
                android:layout_height="match_parent"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_margin="13dp"
                app:cardBackgroundColor="#425CBC"
                app:cardCornerRadius="150dp"
                app:cardElevation="15dp"
                >

                <ImageView
                    android:id="@+id/Profile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/profile2"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="Openprofile"
                    />
            </androidx.cardview.widget.CardView>
        </GridLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


